User management routes fixed
Separated user power from admin in user management.
