# src/controllers/auth.controller.js
@@ -53,54 +53,6 @@ const googleCallback = async (req, res) => {
 
 /**
  * =========================
- * GET PROFILE
- * =========================
- */
-const getUserProfile = async (req, res) => {
-  const user = await authService.getProfile(req.user._id);
-
-  res.status(200).json({
-    success: true,
-    user,
-  });
-};
-
-/**
- * =========================
- * UPDATE PROFILE
- * =========================
- */
-const updateProfile = async (req, res) => {
-  const user = await authService.updateProfile(req.user._id, req.body);
-
-  res.status(200).json({
-    success: true,
-    message: "Profile updated successfully",
-    user,
-  });
-};
-
-/**
- * =========================s
- * CHANGE PASSWORD
- * =========================
- */
-const changePassword = async (req, res) => {
-  await authService.changePassword(
-    req.user._id,
-    req.body.currentPassword,
-    req.body.newPassword,
-    req.body.confirmPassword,
-  );
-
-  res.status(200).json({
-    success: true,
-    message: "Password updated successfully!",
-  });
-};
-
-/**
- * =========================
  * LOGOUT
  * =========================
  */
@@ -117,8 +69,5 @@ module.exports = {
   register,
   login,
   googleCallback,
-  getUserProfile,
-  updateProfile,
-  changePassword,
   logout,
 };
